# vscode-python-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  settings.json
tests/: test_main.py
