[tool.poetry]
name = "vscode-python-template"
version = "0.1.0"
description = ""
authors = ["Cloves Paiva <cloves.paiva@extremedigital.com.br>"]
readme = "README.md"
packages = [{include = "vscode_python_template"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
